Ignore from all environments sensetive tf files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ global/.terraform
 global/.terraform.lock.hcl
 global/terraform.tfstate
 global/terraform.tfstate.backup
+
+development/vpc/.terraform
+development/vpc/.terraform.lock.hcl
+development/vpc/terraform.tfstate
+development/vpc/terraform.tfstate.backup
+
+production/vpc/.terraform
+production/vpc/.terraform.lock.hcl
+production/vpc/terraform.tfstate
+production/vpc/terraform.tfstate.backup
+
+staging/vpc/.terraform
+staging/vpc/.terraform.lock.hcl
+staging/vpc/terraform.tfstate
+staging/vpc/terraform.tfstate.backup
